<resources>
    <!-- Auth -->
    <string name="app_name">Color-Android</string>
    <string name="your_colors">How\'s\nYour\nColor\nToday?</string>
    <string name="login_text">Color 표현하기</string>
    <string name="register_text">#Color와 함께하기</string>
    <string name="no_account">계정이 없으신가요?</string>
    <string name="login_insert_email">이메일을 입력하세요</string>
    <string name="login_insert_pass">비밀번호를 입력하세요</string>
    <string name="expression_color">당신의 컬러를\n표현해 볼까요?</string>
    <string name="sign_code_example">Your color</string>
    <string name="sign_insert_name">닉네임을 입력하세요(마이페이지에서 변경 가능)</string>
    <string name="sign_insert_pass">비밀번호를 입력하세요 (8 ~ 16자)</string>
    <string name="pass_overlap">비밀번호를 다시 입력하세요</string>
    <string name="sign_insert_email">이메일을 입력하세요</string>
    <string name="check_overlap">중복 확인</string>
    <string name="send_code">코드 전송</string>
    <string name="check_code">여기를 눌러 컬러가 맞는지 확인해 보세요!</string>
    <string name="success_code">컬러가 일치합니다 :)</string>
    <string name="fail_code">컬러가 일치하지 않습니다 :(</string>
    <string name="send_email">입력하신 이메일로 인증 코드가 발송되었습니다.</string>
    <string name="sign_available_nickname">사용 가능한 닉네임 입니다.</string>
    <string name="sign_unavailable_nickname">사용 불가능한 닉네임 입니다.</string>
    <string name="sign_error">오류가 발생했습니다.</string>
    <string name="success_register">회원가입에 성공했습니다!</string>
    <string name="fail_register">회원가입에 실패했습니다.</string>
    <string name="login_fail">로그인에 실패했습니다.</string>
    <string name="logout">로그아웃</string>
    <string name="logout_question">로그아웃 하시겠습니까?</string>
    <!-- Auth -->

    <!--  Color Explain  -->
    <string name="explain_your_color">당신의컬러</string>
    <string name="angry">ANGRY</string>
    <string name="happy">HAPPY</string>
    <string name="sad">SAD</string>
    <string name="bored">BORED</string>
    <string name="love">LOVE</string>
    <string name="shame">SHAME</string>
    <string name="explain_angry">오늘 화나는 일이 있었다면\n빨간색을 선택하세요.</string>
    <string name="explain_angry2">글을 쓰다보면\n어느새 화가 풀려있을 거예요.</string>
    <string name="explain_happy">오늘 즐거운 일이 있었다면\n노란색을 선택하세요.</string>
    <string name="explain_happy2">즐거움을 나누면\n더 즐거울 거예요.</string>
    <string name="explain_sad">오늘 슬픈 일이 있었다면\n파란색을 선택하세요.</string>
    <string name="explain_sad2">즐거움은 나누면 배가 되고,\n슬픔은 반이 될 거예요.</string>
    <string name="explain_bored">오늘 하루 심심했다면\n회색을 선택하세요.</string>
    <string name="explain_bored2">심심한 사람들과\n재미를 찾아보세요.</string>
    <string name="explain_love">오늘 하루 설렌 일이 있었다면\n분홍색을 선택하세요.</string>
    <string name="explain_love2">당신의 인생에 찾아온\n소설같은 이야기를 공유하세요.</string>
    <string name="explain_shame">오늘 수치스러운 일이 있었다면\n남색을 선택하세요.</string>
    <string name="explain_shame2">당신의 수치스러운 일이\n누군가에게 웃음을 줄지도 몰라요.</string>
    <!--  Color Explain  -->

    <!--  Feed  -->
    <string name="hash_color">#Color</string>
    <string name="feed_name">정현왕자님</string>
    <string name="feed_date">2021년 7월 14일</string>
    <string name="feed_content">나는 강남에 빌딩있는데 이 인생 패배자들아 ㅗㅗ</string>
    <string name="like_cnt">123</string>
    <string name="comment_cnt">35</string>
    <string name="report">신고하기</string>
    <string name="delete_post">게시글 삭제하기</string>
    <string name="modify_post">게시글 수정하기</string>
    <string name="view_other">" "게시글 보기</string>
    <string name="delete_post_success">게시글이 삭제되었습니다.</string>
    <string name="do_not_delete">삭제할 수 없습니다.</string>
    <string name="delete_post_dialog_title">게시글을 삭제하시겠습니까?</string>
    <string name="delete_post_dialog_content1">게시글을 삭제하면</string>
    <string name="delete_post_dialog_content2">복구가 불가능 합니다.</string>
    <string name="feed_dialog_cancel">취소</string>
    <string name="feed_dialog_delete">삭제</string>
    <string name="comment">댓글 입력하기</string>
    <string name="view_profile">" "프로필 보기</string>
    <string name="delete_comment">댓글 삭제하기</string>
    <string name="comment_report">신고</string>
    <string name="comment_report_description">허위 신고 시 불이익이 발생할 수 있습니다.</string>
    <string name="comment_report_description2">신고 내용을 선택해주세요.</string>
    <string name="report_1">광고성 게시물</string>
    <string name="report_2">강한 욕설 및 비하</string>
    <string name="report_3">음란한 게시물</string>
    <string name="report_4">적합하지 않은 주제</string>
    <string name="report_remember">신고하기 전에 "생각" 하셨나요?</string>
    <string name="send_report">신고가 접수되었습니다.</string>
    <!--  Feed  -->

    <!--  Write  -->
    <string name="write_how_you_feel">당신의 기분은 어떠신가요?</string>
    <string name="write_et_hint">오늘 하루 당신의 이야기를 들려주세요</string>
    <string name="write_hash_tag">해시태그</string>
    <string name="write_post">게시</string>
    <string name="write_hash_tag_hint">#해시태그</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">오류가 발생했습니다.</string>
    
    <!--  Profile  -->
    <string name="modify">변경</string>
    <string name="modify_cancel">취소</string>
    <string name="user_color">의 컬러</string>
    <string name="modify_name_success">닉네임을 변경했습니다.</string>
    <string name="do_not_change_name">닉네임을 변경할 수 없습니다.</string>

</resources>
