<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.gram.color_android.viewmodel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sign_up_background">

        <ImageButton
            android:id="@+id/sign_close_ib"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/font_nanum_gothic_bold"
            android:lineSpacingExtra="10dp"
            android:text="@string/expression_color"
            android:textColor="@color/black"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_code_back_tv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/sign_up_code"
            android:backgroundTint="@color/love"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_email_et" />

        <EditText
            android:id="@+id/sign_name_et"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/sign_insert_name"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/sign_overlap_tv"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/code_button"
            android:backgroundTint="@color/love"
            android:fontFamily="@font/font_nanum_gothic"
            android:enabled="false"
            android:gravity="center"
            android:onClick="@{() -> viewModel.nameCheck(signNameEt.getText().toString())}"
            android:text="@string/check_overlap"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/sign_name_et"
            app:layout_constraintEnd_toEndOf="@+id/sign_name_et"
            app:layout_constraintTop_toTopOf="@+id/sign_name_et" />

        <EditText
            android:id="@+id/sign_pass_et"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/sign_insert_pass"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_name_et" />

        <EditText
            android:id="@+id/pass_overlap_et"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/pass_overlap"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_pass_et" />

        <EditText
            android:id="@+id/sign_email_et"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/sign_insert_email"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_overlap_et" />

        <TextView
            android:id="@+id/sign_send_tv"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/code_button"
            android:backgroundTint="@color/love"
            android:fontFamily="@font/font_nanum_gothic"
            android:enabled="false"
            android:gravity="center"
            android:onClick="@{() -> viewModel.sendEmail(signEmailEt.getText().toString())}"
            android:text="@string/send_code"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/sign_email_et"
            app:layout_constraintEnd_toEndOf="@+id/sign_email_et"
            app:layout_constraintTop_toTopOf="@+id/sign_email_et" />

        <EditText
            android:id="@+id/sign_code_et"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@null"
            android:fontFamily="@font/font_nanum_gothic"
            android:gravity="center"
            android:hint="@string/sign_code_example"
            android:inputType="textPersonName"
            android:maxLength="7"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/sign_code_back_tv"
            app:layout_constraintEnd_toEndOf="@+id/sign_code_back_tv"
            app:layout_constraintStart_toStartOf="@+id/sign_code_back_tv"
            app:layout_constraintTop_toTopOf="@+id/sign_code_back_tv" />

        <TextView
            android:id="@+id/sign_code_check_tv"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:enabled="false"
            android:onClick="@{() -> viewModel.emailCertify(signEmailEt.getText().toString, signCodeEt.getText().toString())}"
            android:text="@string/check_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_code_back_tv" />


        <TextView
            android:id="@+id/sign_up_btn"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/sign_button"
            android:backgroundTint="@color/love"
            android:fontFamily="@font/font_nanum_gothic"
            android:gravity="center"
            android:text="@string/register_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_code_check_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>