<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="370dp"
    android:background="@drawable/feed_dialog">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_report"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/font_roboto_medium"
        android:text="@string/comment_report"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_roboto_light"
        android:text="@string/comment_report_description"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_roboto_light"
        android:text="@string/comment_report_description2"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="17dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
            android:id="@+id/radio_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black" />

        <RadioButton
            android:id="@+id/radio_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black" />

        <RadioButton
            android:id="@+id/radio_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black" />

        <RadioButton
            android:id="@+id/radio_btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black" />

    </RadioGroup>

    <RadioButton
        android:id="@+id/confirm_radio_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <TextView
        android:id="@+id/reason1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="97dp"
        android:fontFamily="@font/font_roboto_medium"
        android:text="@string/report_1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/radio_group"
        app:layout_constraintStart_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toTopOf="@+id/radio_group" />

    <TextView
        android:id="@+id/reason2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/font_roboto_medium"
        android:text="@string/report_2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toBottomOf="@+id/reason1_tv" />

    <TextView
        android:id="@+id/reason3_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/font_roboto_medium"
        android:text="@string/report_3"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/reason4_tv"
        app:layout_constraintStart_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toBottomOf="@+id/reason2_tv" />

    <TextView
        android:id="@+id/reason4_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/font_roboto_medium"
        android:text="@string/report_4"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/radio_group"
        app:layout_constraintStart_toEndOf="@+id/radio_group"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/font_roboto_bold"
        android:text="@string/report_remember"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_radio_btn"
        app:layout_constraintStart_toEndOf="@+id/confirm_radio_btn"
        app:layout_constraintTop_toTopOf="@+id/confirm_radio_btn" />

    <Button
        android:id="@+id/report_negative_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/feed_dialog_cancel"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/font_nanum_gothic_bold"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/report_positive_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:fontFamily="@font/font_nanum_gothic_bold"
        android:text="@string/comment_report"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>