<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_up_background">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/font_nanum_gothic"
        android:lineSpacingExtra="10dp"
        android:text="@string/expression_color"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sign_code_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_sign_up_code"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/sign_name_et"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingBottom="15dp"
        android:hint="@string/sign_insert_name"
        android:textSize="12sp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/sign_pass_et"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingBottom="15dp"
        android:hint="@string/sign_insert_pass"
        android:textSize="12sp"
        android:maxLines="1"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_name_et" />

    <EditText
        android:id="@+id/pass_overlap_et"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingBottom="15dp"
        android:hint="@string/pass_overlap"
        android:maxLength="16"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_pass_et" />

    <EditText
        android:id="@+id/sign_email_et"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingBottom="15dp"
        android:hint="@string/sign_insert_email"
        android:maxLength="16"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_overlap_et" />

    <EditText
        android:id="@+id/sign_code_et"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/sign_code_example"
        android:fontFamily="@font/font_nanum_gothic"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:maxLength="7"
        app:layout_constraintBottom_toBottomOf="@+id/sign_code_iv"
        app:layout_constraintEnd_toEndOf="@+id/sign_code_iv"
        app:layout_constraintStart_toStartOf="@+id/sign_code_iv"
        app:layout_constraintTop_toTopOf="@+id/sign_code_iv" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@null"
        android:src="@drawable/ic_sign_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>